added google fonts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway" rel="stylesheet">
+    <script src="script.js"></script>
 </head>
 <body>
     <section class="intro">
@@ -16,8 +18,8 @@
             </div>
             <div class="text">
                 <h1>Introduction</h1>
-                <h2>Hi! I am Yannick Dongo </h2>
-                <h3>Welcome to my page,<br> I hope I interest you and you consider hiring me to build unique, efficient websites for you.</h3>
+                <h3>Hi! I am Yannick Dongo </h3>
+                <p>Welcome to my page,<br> I hope I interest you and you consider hiring me to build unique, efficient websites for you.</p>
             </div>
         </div>
 
