added flex display

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
     <section class="intro">
-        <div id="info">
+        <div id="info" class="container">
             <div class="myImage">
                 <img id="passport" src="images/day1.jpg">
             </div>
             <div class="text">
                 <h1>Introduction</h1>
                 <h3>Hi! I am Yannick Dongo </h3>
-                <p>Welcome to my page,<br> I hope I interest you and you consider hiring me to build unique, efficient websites for you.</p>
+                <p>Welcome to my page I hope I interest you and you consider hiring me to build unique, efficient websites for you.</p>
             </div>
         </div>
 
@@ -28,14 +28,15 @@
     <hr>
 
     <section class="education">
-        <div class="myImage">
-            <img id="university" src="images/education1.jpg">
+        <div class="container">
+            <div class="myImage">
+                <img id="university" src="images/education1.jpg">
 
-        </div>
-        <div class="text">
-            <h2>Education</h2>
-            <h3>B.Eng, Information and Communication Engineering</h3>
-            <h4><em>Covenant University, July 2017</em></h4>
+            </div>
+            <div class="text">
+                <h2>Education</h2>
+                <h3>B.Eng, Information and Communication Engineering</h3>
+                <h4><em>Covenant University, July 2017</em></h4>
                 <ul>
                     <li>
                         <p>Graduated with First Class honours.</p>
@@ -47,38 +48,41 @@
                         <p>Captain School Tennis Team</p>
                     </li>
                 </ul>
+            </div>
         </div>
     </section>
 
     <hr>
     <section class="experience">
-        <div class="myImage">
-            <img id="work" src="images/work1.jpg">
+        <div class="container">
+            <div class="myImage">
+                <img id="work" src="images/work1.jpg">
 
-        </div>
-        <div class="text">
-            <h2>Experience</h2>
-            <h3>Software Developer Intern</h3>
-            <h4><em>Interswitch Group, January-July, 2016</em></h4>
-            <ul>
-                <li>
-                    <p><b>Software development:</b> Created "GameOfChance" a lucky dip promotional app for an Interswitch partner,
-                        and the database module for QuickTeller Kiosk.</p>
-                </li>
-                <li>
-                    <p><b>Software Documentation:</b> Created the latest edition of the Kimono User Manual, created several Mockups,
-                        flowcharts, Unified Modelling Language(UML) diagrams, Sequence diagrams, network diagrams for different projects.</li>
-                <li>
-                    <p><b>Merchant X project:</b> Worked with UI/UX team and Unit leads to create content such as API
-                        references, SDK's, user guides and tutorials and design how the user interacts with these content on
-                        the site.</p>
-                </li>
-                <li>
-                    <p><b>Support Work:</b> Assisting with Kimono's PA DSS testing, Downloading kernels to POS devices, signing
-                        Kernels, setting up POS devices for use, provided support services to colleagues in other countries
-                        via Skype and TeamViewer in order to help solve challenges.
-                </li>
-            </ul>
+            </div>
+            <div class="text">
+                <h2>Experience</h2>
+                <h3>Software Developer Intern</h3>
+                <h4><em>Interswitch Group, January-July, 2016</em></h4>
+                <ul>
+                    <li>
+                        <p><b>Software development:</b> Created "GameOfChance" a lucky dip promotional app for an Interswitch partner,
+                            and the database module for QuickTeller Kiosk.</p>
+                    </li>
+                    <li>
+                        <p><b>Software Documentation:</b> Created the latest edition of the Kimono User Manual, created several Mockups,
+                            flowcharts, Unified Modelling Language(UML) diagrams, Sequence diagrams, network diagrams for different projects.</li>
+                    <li>
+                        <p><b>Merchant X project:</b> Worked with UI/UX team and Unit leads to create content such as API
+                            references, SDK's, user guides and tutorials and design how the user interacts with these content on
+                            the site.</p>
+                    </li>
+                    <li>
+                        <p><b>Support Work:</b> Assisting with Kimono's PA DSS testing, Downloading kernels to POS devices, signing
+                            Kernels, setting up POS devices for use, provided support services to colleagues in other countries
+                            via Skype and TeamViewer in order to help solve challenges.
+                    </li>
+                </ul>
+            </div>
         </div>
 
     </section>
@@ -86,80 +90,87 @@
     <hr>
 
     <section class="training">
-        <div class="myImage">
-            <img id="courses" src="images/courses1.png">
+        <div class="container">
+            <div class="myImage">
+                <img id="courses" src="images/courses1.png">
 
-        </div>
-        <div class="text">
-            <h2>Trainings</h2>
+            </div>
+            <div class="text">
+                <h2>Trainings</h2>
 
-            <ul>
-                <li>
-                    <p>Udacity's Front-End Web Developer Nanodegree Program Jun, 2017-Present </p>
-                </li>
-                <li>
-                    <p>Flatiron School Web Development BootCamp Jun, 2017-Present </p>
-                </li>
-                <li>
-                    <p>Covenant University’s Java Programming BootCamp May, 2017-July, 2017 </p>
-                </li>
+                <ul>
+                    <li>
+                        <p>Udacity's Front-End Web Developer Nanodegree Program Jun, 2017-Present </p>
+                    </li>
+                    <li>
+                        <p>Flatiron School Web Development BootCamp Jun, 2017-Present </p>
+                    </li>
+                    <li>
+                        <p>Covenant University’s Java Programming BootCamp May, 2017-July, 2017 </p>
+                    </li>
 
-            </ul>
+                </ul>
+            </div>
         </div>
 
     </section>
     <hr>
 
     <section class="certification">
-        <div class="myImage">
-            <img id="certificate" src="images/certification1.jpg">
+       <div class="container">
+               <div class="myImage">
+                   <img id="certificate" src="images/certification1.jpg">
 
-        </div>
-        <div class="text">
-            <h2>Certification/Awards</h2>
+               </div>
+               <div class="text">
+                   <h2>Certification/Awards</h2>
 
-            <ul>
-                <li>
-                    <p>Diploma for Leadership Development. Jul, 2017. </p>
-                </li>
-                <li>
-                    <p>AT&T Aspire to Tech Scholarship Program. Jun, 2017. </p>
-                </li>
-                <li>
-                    <p>Certified Fiber Optics Technician (CFOT). May, 2017. </p>
-                </li>
-                <li>
-                    <p>Cisco Certified Network Associate (CCNA). Apr, 2015.</p>
-                </li>
-                <li>
-                    <p>Agbami Medical and Engineering Scholarship (AMEPS). Sep, 2014.</p>
-                </li>
-            </ul>
-        </div>
+                   <ul>
+                       <li>
+                           <p>Diploma for Leadership Development. Jul, 2017. </p>
+                       </li>
+                       <li>
+                           <p>AT&T Aspire to Tech Scholarship Program. Jun, 2017. </p>
+                       </li>
+                       <li>
+                           <p>Certified Fiber Optics Technician (CFOT). May, 2017. </p>
+                       </li>
+                       <li>
+                           <p>Cisco Certified Network Associate (CCNA). Apr, 2015.</p>
+                       </li>
+                       <li>
+                           <p>Agbami Medical and Engineering Scholarship (AMEPS). Sep, 2014.</p>
+                       </li>
+                   </ul>
+               </div>
+       </div>
 
     </section>
 
     <hr>
 
     <section id="interest">
-        <div class="text">
+        <div id="hobbies" class="text">
             <h1>Interests</h1>
             <h3>These are my interests.</h3>
         </div>
-        <div>
-            <div class="myImage">
-                <img id="travel" src="images/travel1.jpg">
+      <div class="container">
 
-            </div>
-            <div class="myImage">
-                <img id="technology" src="images/technology1.gif">
+          <div>
+              <div class="myImage">
+                  <img id="travel" src="images/travel1.jpg">
 
-            </div>
-            <div class="myImage">
-                <img id="internet" src="images/internet1.jpg">
+              </div>
+              <div class="myImage">
+                  <img id="technology" src="images/technology1.gif">
 
-            </div>
-        </div>
+              </div>
+              <div class="myImage">
+                  <img id="internet" src="images/internet1.jpg">
+
+              </div>
+          </div>
+      </div>
     </section>
 
 
