added contact information

--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
             </div>
             <div class="text">
                 <h1>Introduction</h1>
-                <h3>Hi! I am Yannick Dongo </h3>
-                <p>Welcome to my page I hope I interest you and you consider hiring me to build unique, efficient websites for you.</p>
+                <h3>Hi! I am Yannick Dongo, an aspiring web developer </h3>
+                <p>In June 2017, I picked up an interest in forging a career in web development.
+                    I have been building capacity by taking online courses. I still have a lot to learn and would welcome mentorship.
+                    Welcome to my page I hope I interest you and you consider hiring me to build unique, efficient websites for you.</p>
             </div>
         </div>
 
     </section>
 
-    <hr>
+
 
     <section class="education">
         <div class="container">
@@ -52,7 +54,7 @@
         </div>
     </section>
 
-    <hr>
+
     <section class="experience">
         <div class="container">
             <div class="myImage">
@@ -87,7 +89,7 @@
 
     </section>
 
-    <hr>
+
 
     <section class="training">
         <div class="container">
@@ -114,7 +116,7 @@
         </div>
 
     </section>
-    <hr>
+
 
     <section class="certification">
        <div class="container">
@@ -147,31 +149,72 @@
 
     </section>
 
-    <hr>
+
 
     <section id="interest">
-        <div id="hobbies" class="text">
+
             <h1>Interests</h1>
             <h3>These are my interests.</h3>
-        </div>
-      <div class="container">
 
-          <div>
+      <div class="container interestText">
+
               <div class="myImage">
                   <img id="travel" src="images/travel1.jpg">
+                  <p>Travelling</p>
 
               </div>
               <div class="myImage">
                   <img id="technology" src="images/technology1.gif">
+                  <p>Technology</p>
 
               </div>
               <div class="myImage">
                   <img id="internet" src="images/internet1.jpg">
+                  <p>Internet of Things (IoT)</p>
 
               </div>
           </div>
-      </div>
     </section>
+
+    <section class="contact">
+        <h2>Contact Me!</h2>
+        <div id="" class="container">
+            <div class="myImage">
+                <img id="contactImage" src="images/contact1.jpg">
+            </div>
+            <div class="text">
+
+                <div class="form">
+                    <form action="/action_page.php">
+
+                        <label for="fname">First Name</label>
+                        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+                        <label for="lname">Last Name</label>
+                        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                        <label for="info">E-mail</label>
+                        <input type="text" id="email" name="emailAddress" placeholder="Your E-mail Address..">
+
+                        <label for="country">Country</label>
+                        <select id="country" name="country">
+                            <option value="nigeria">Nigeria</option>
+                            <option value="germany">Germany</option>
+                            <option value="usa">USA</option>
+                        </select>
+
+                        <label for="subject">Subject</label>
+                        <textarea id="subject" name="subject" placeholder="Write something.." style="height:50px"></textarea>
+
+                        <input type="submit" value="Submit">
+
+                    </form>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 
 
 
