changed the images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="text">
                 <h1>Introduction</h1>
-                <h3>Hi! I am Yannick Dongo, an aspiring web developer </h3>
+                <h3>Hi! I am Yannick Dongo, an aspiring software developer </h3>
                 <p>In June 2017, I picked up an interest in forging a career in web development.
                     I have been building capacity by taking online courses. I still have a lot to learn and would welcome mentorship.
                     Welcome to my page I hope I interest you and you consider hiring me to build unique, efficient websites for you.</p>
@@ -32,7 +32,7 @@
     <section class="education">
         <div class="container">
             <div class="myImage">
-                <img id="university" src="images/education1.jpg">
+                <img id="university" src="images/img1.jpg">
 
             </div>
             <div class="text">
@@ -58,7 +58,7 @@
     <section class="experience">
         <div class="container">
             <div class="myImage">
-                <img id="work" src="images/work1.jpg">
+                <img id="work" src="images/img2.jpg">
 
             </div>
             <div class="text">
@@ -94,7 +94,7 @@
     <section class="training">
         <div class="container">
             <div class="myImage">
-                <img id="courses" src="images/courses1.png">
+                <img id="courses" src="images/img3.jpg">
 
             </div>
             <div class="text">
@@ -121,7 +121,7 @@
     <section class="certification">
        <div class="container">
                <div class="myImage">
-                   <img id="certificate" src="images/certification1.jpg">
+                   <img id="certificate" src="images/img5.jpg">
 
                </div>
                <div class="text">
