Added Media Queries

--- a/index.html
+++ b/index.html
@@ -118,6 +118,37 @@
     </section>
 
 
+    <section class="skills">
+        <div class="container">
+            <div class="myImage">
+                <img id="skill" src="images/img4.jpg">
+
+            </div>
+            <div class="text">
+                <h2>Skills</h2>
+
+                <ul>
+                    <li>
+                        <p>HTML </p>
+                    </li>
+                    <li>
+                        <p>CSS </p>
+                    </li>
+                    <li>
+                        <p>Client and Server-side Javascript </p>
+                    </li>
+                    <li>
+                        <p>Java </p>
+                    </li>
+
+
+                </ul>
+            </div>
+        </div>
+
+    </section>
+
+
     <section class="certification">
        <div class="container">
                <div class="myImage">
