Added Media Queries

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Yannick Dongo's Portfolio</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway" rel="stylesheet">
     <script src="script.js"></script>
 </head>
