Added Media Queries

--- a/index.html
+++ b/index.html
@@ -180,11 +180,9 @@
 
     </section>
 
-
-
     <section id="interest">
 
-            <h1>Interests</h1>
+            <h2>Interests</h2>
             <h3>These are my interests.</h3>
 
       <div class="container interestText">
@@ -204,11 +202,13 @@
                   <p>Internet of Things (IoT)</p>
 
               </div>
-          </div>
+      </div>
     </section>
 
     <section class="contact">
-        <h2>Contact Me!</h2>
+       <div class="contact">
+           <h2>Contact Me!</h2>
+       </div>
         <div id="" class="container">
             <div class="myImage">
                 <img id="contactImage" src="images/contact1.jpg">
